# incubator-graphar

./: .asf.yaml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DISCLAIMER  EdgeIter_Bug_Analysis_and_Fix.md  EdgeIter_Fix_Test_Report.md  EdgeIter_Tests_Integration.md  LICENSE  NOTICE  README-zh-cn.md  README.md  README.rst  buf.gen.yaml  buf.yaml  cmake-format.py  codecov.yml  gar-config-version.in.cmake  gar-config.in.cmake  licenserc.toml  pom.xml  requirements-dev.txt
cli/: .gitignore  CMakeLists.txt  README.md  import.full.json  import.full.yml  import.json  import.mini.json  import.mini.yml  pyproject.toml
cli/conda.recipe/: meta.yaml
cli/src/: importer.h  main.cc  util.h
cli/src/graphar_cli/: __init__.py  config.py  graphar_cli.py  importer.py  logging.py
cli/test/: merge.py  test_basic.py
cpp/: .clang-format  .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README.rst  build_macos.sh  build_ubuntu.sh  disclaimer_footer.html  gar-config-version.in.cmake  gar-config.in.cmake  graphar-config-version.in.cmake  graphar-config.in.cmake
cpp/apidoc/: .gitignore  Doxyfile
cpp/benchmarks/: CMakeLists.txt  arrow_chunk_reader_benchmark.cc  benchmark_util.h  graph_info_benchmark.cc  label_filter_benchmark.cc  lru_cache_benchmark.cc
cpp/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  graphar-config-version.cmake
cpp/cmake/: apache-arrow.cmake
cpp/examples/: CMakeLists.txt  bfs_father_example.cc  bfs_pull_example.cc  bfs_push_example.cc  bfs_stream_example.cc  bgl_example.cc  cc_push_example.cc  cc_stream_example.cc  config.h  construct_info_example.cc  filtering_example.cc  high_level_label_reader_example.cc  high_level_reader_example.cc  high_level_writer_example.cc  label_filtering_example.cc  label_reader_example.cc  low_level_reader_example.cc  mid_level_reader_example.cc  mid_level_writer_example.cc  pagerank_example.cc  snap_dataset_to_graphar.cc
cpp/extensions/kuzu-extension/: CMakeLists.txt  README.md
cpp/extensions/kuzu-extension/test/: README.md  graphar_extension_copy_test.cpp  graphar_extension_copy_to_test.cpp  graphar_extension_load_test.cpp  graphar_extension_metadata_test.cpp
cpp/grin/: CMakeLists.txt  predefine.h
cpp/grin/c_test/: test.c
cpp/grin/example/: bfs_pull_with_grin.cc  bfs_pull_without_grin.cc  cc_push_with_grin.cc  cc_push_without_grin.cc  config.h  distributed_pagerank_with_grin.cc  pagerank.cc  pagerank_with_grin.cc  pagerank_without_grin.cc  property_with_grin.cc  property_without_grin.cc  test_index.cc  test_property_list.cc  test_property_primarykey.cc  test_property_table.cc  test_property_topology.cc  test_property_type.cc  test_topology.cc
cpp/grin/src/: .gitignore  predefine.cc  predefine.h
cpp/grin/src/common/: error.cc  message.cc
cpp/grin/src/index/: external_id.cc  internal_id.cc  order.cc  original_id.cc
cpp/grin/src/partition/: partition.cc  reference.cc  topology.cc
cpp/grin/src/property/: primarykey.cc  property.cc  (+6 more)
cpp/grin/test/: config.h  test_index.cc  test_partition.cc  test_partition_reference.cc  test_partition_topology.cc  test_property_list.cc  test_property_primarykey.cc  test_property_row.cc  test_property_table.cc  test_property_topology.cc  test_property_type.cc  test_topology.cc
cpp/include/gar/: api.h  fwd.h  graph.h  graph_info.h
cpp/include/graphar/: api.h  fwd.h  graph.h
cpp/misc/: cpplint.py
cpp/proto/: adjacent_list.pb.cc  adjacent_list.pb.h  edge_info.pb.cc  edge_info.pb.h  enums.pb.cc  enums.pb.h  graph_info.pb.cc  graph_info.pb.h  property_group.pb.cc  property_group.pb.h  vertex_info.pb.cc  vertex_info.pb.h
cpp/src/: CMakeLists.txt  arrow_chunk_reader.cc  arrow_chunk_writer.cc  chunk_info_reader.cc  data_type.cc  edges_builder.cc  expression.cc  filesystem.cc  graph.cc  graph_info.cc  reader_util.cc  reader_utils.cc  util.cc  utils.cc  version_parser.cc  vertices_builder.cc  yaml.cc
cpp/src/graphar/: chunk_info_reader.cc  chunk_info_reader.h  chunk_info_writer.cc  chunk_info_writer.h  convert_to_arrow_type.h  expression.cc  expression.h  filesystem.cc  filesystem.h  fwd.h  general_params.h  graph_info.cc  graph_info.h  label.cc  label.h  lru_cache.h  macros.h  reader_util.cc  reader_util.h  result.h  status.h  types.cc  types.h  util.cc  util.h  version_parser.cc  version_parser.h  writer_util.cc  writer_util.h  yaml.cc  yaml.h
cpp/test/: CMakeLists.txt  config.h  test_arrow_chunk_reader.cc  test_arrow_chunk_writer.cc  test_builder.cc  test_chunk_info_reader.cc  test_graph.cc  test_info.cc  test_lru_cache.cc  test_multi_label.cc  test_multi_property.cc  test_util.cc  tmp  util.h
examples/pagerank/: CMakeLists.txt  README.rst  pagerank.cc
examples/pagerank/cmake/: apache-arrow.cmake
java/: .gitignore  CMakeLists.txt  README.md  build.xml  dependency-reduced-pom.xml  install-llvm11.sh  pom.xml
java/cmake/: graphar-cpp.cmake
pyspark/: Makefile  README.md  README.rst  pyproject.toml
pyspark/graphar_pysaprk/: __init__.py  enums.py  graph.py  info.py  reader.py  writer.py
pyspark/graphar_pyspark/: __init__.py  enums.py  errors.py  graph.py  info.py  reader.py  util.py  writer.py
pyspark/template/: module.html.jinja2
pyspark/tests/: __init__.py  conftest.py  test_enums.py  test_info.py  test_reader.py  test_transform.py  test_writer.py
python/: CMakeLists.txt  Makefile  README.md  pyproject.toml
python/example/: graph_info_example.py  high_level_example.py
python/src/bindings/: _core_module.cc  cli_binding.cc  graph_info_binding.cc  high_level_binding.cc  importer.h  types_binding.cc
python/src/cli/: README.md  __init__.py  graphar_cli.py
python/src/client/: __init__.py  graphar_cli.py
python/src/graphar/: __init__.py  command_cli_api.py  graph_info.py  graph_info_api.py  graphar_cli.py  high_level.py  import.py  logging.py  types.py  types_api.py
python/test/: conftest.py  test_graph_info.py  test_graphar_cli.py  test_high_level_api.py
(+1779 files in other folders)
